# medbook-orderservice

./: .env  Cargo.toml  Dockerfile
.github/workflows/: 01-docker-publish.yaml
migrations/2025-10-17-144954-0000_outbox/: down.sql  up.sql
migrations/2025-10-17-154456-0000_init/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/api/: deliveries.rs  mod.rs  products.rs
src/consumers/: orders.rs
src/routes/: mod.rs  orders.rs  payments.rs
src/routes/patients/: carts.rs  mod.rs  orders.rs
